infrastracture/ms-a/02-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ms-a-service
  labels:
    app: ms-a
spec:
  selector:
    app: ms-a
  ports:
  - nodePort: 30007
    port: 80
    protocol: TCP
    targetPort: 3000
  type: NodePort
