infrastracture/ms-a/03-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ms-a
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-resource-group: two-microser_group
    service.beta.kubernetes.io/azure-load-balancer-public-ip-name: 20.74.102.125

spec:
  # 
  rules:
  
  - host: gl5.devops
    http:
      paths:
      - backend:
          service:
            name: ms-a-service
            port:
              number: 80
        path: /
        pathType: prefix
